k8s/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: server-panel
  annotations:
    kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: adminer
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: adminer
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - image: adminer:latest
          name: adminer
          resources:
            limits:
              cpu: 500m
              memory: "268435456"
            requests:
              cpu: 100m
              memory: "67108864"
      restartPolicy: Always
