k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: server-panel
  annotations:
    kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: backend
    spec:
      securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          fsGroup: 1000
      containers:
        - env:
            - name: BROKER_URL
              value: mqtt://mqtt:1883
            - name: JWT_SECRET_FILE
              value: /run/secrets/jwt-auth
            - name: MONGODB_URI
              value: mongodb://mongodb:27017/database
            - name: NODE_ENV
              value: production
            - name: PORT
              value: "3000"
            - name: REDIS_URL
              value: redis://redis:6379
            - name: WEB_HOST
              value: '''http://nginx'''
          image: wojdeg13/server-panel-backend:v1.0.0
          name: backend
          resources:
            limits:
              cpu: 1500m
              memory: "1073741824"
            requests:
              cpu: 500m
              memory: "268435456"
          livenessProbe:
              httpGet:
                path: /api/health
                port: 3000
              initialDelaySeconds: 15
              periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /run/secrets/db-user
              name: db-user
              subPath: db-user
            - mountPath: /run/secrets/db-password
              name: db-password
              subPath: db-password
            - mountPath: /run/secrets/jwt-auth
              name: jwt-auth
              subPath: jwt-auth
      restartPolicy: Always
      terminationGracePeriodSeconds: 90
      volumes:
        - name: db-user
          secret:
            items:
              - key: db-user
                path: db-user
            secretName: db-user
        - name: db-password
          secret:
            items:
              - key: db-password
                path: db-password
            secretName: db-password
        - name: jwt-auth
          secret:
            items:
              - key: jwt-auth
                path: jwt-auth
            secretName: jwt-auth
