k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: server-panel
  annotations:
    kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - env:
            - name: SECRET_KEY_FILE
              value: /run/secrets/jwt-auth
          image: wojdeg13/server-panel-front:v1.0.0
          name: frontend
          resources:
            limits:
              cpu: "1"
              memory: "536870912"
            requests:
              cpu: 200m
              memory: "134217728"
          volumeMounts:
            - mountPath: /run/secrets/jwt-auth
              name: jwt-auth
              subPath: jwt-auth
          livenessProbe:
              httpGet:
                path: /
                port: 3000
              initialDelaySeconds: 15
              periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: jwt-auth
          secret:
            items:
              - key: jwt-auth
                path: jwt-auth
            secretName: jwt-auth
