k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: mongodb
    spec:
      containers:
        - image: mongo
          name: mongodb
          resources:
            limits:
              cpu: 1500m
              memory: "1073741824"
            requests:
              cpu: 500m
              memory: "268435456"
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: mongodb-cm0
          name: mongodb-cm0
