k8s/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: server-panel
spec:
  serviceName: "mongodb"
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  template:
    metadata:
      labels:
        io.kompose.service: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
      volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
