k8s/mqtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: server-panel
  annotations:
    kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mqtt
  name: mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: mqtt
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - image: eclipse-mosquitto
          name: mqtt
          ports:
            - containerPort: 1883
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: "268435456"
            requests:
              cpu: 100m
              memory: "67108864"
          volumeMounts:
            - mountPath: /mosquitto/config/mosquitto.conf
              name: mqtt-cm0
              subPath: mosquitto.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: mosquitto.conf
                path: mosquitto.conf
            name: mqtt-cm0
          name: mqtt-cm0
