k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: server-panel
  annotations:
    kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: nginx
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1001
      #   runAsGroup: 1001
      #   fsGroup: 1001
      containers:
        - image: nginx:alpine
          name: nginx
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: "268435456"
            requests:
              cpu: 100m
              memory: "67108864"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-cm0
              subPath: default.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: nginx.conf
                path: default.conf
            name: nginx-cm0
          name: nginx-cm0
