k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: server-panel
  annotations:
    kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: redis
    spec:
      securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          fsGroup: 1000
      containers:
        - image: redis:alpine
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 10
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          name: redis
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 500m
              memory: "536870912"
            requests:
              cpu: 200m
              memory: "134217728"
          volumeMounts:
            - mountPath: /data
              name: redis-data
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
