k8s/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: server-panel
  name: adminer
spec:
  selector:
    io.kompose.service: adminer
  ports:
    - port: 8080
      targetPort: 8080
