k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: server-panel
  name: backend
spec:
  selector:
    io.kompose.service: backend
  ports:
    - port: 3000
      targetPort: 3000
