k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: server-panel
  name: frontend
spec:
  selector:
    io.kompose.service: frontend
  ports:
    - port: 3000
      targetPort: 3000
