k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: server-panel
  name: mongodb
spec:
  selector:
    io.kompose.service: mongodb
  ports:
    - port: 27017
      targetPort: 27017
