k8s/mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: server-panel
  annotations:
    kompose.cmd: C:\Users\Wojtek\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mqtt
  name: mqtt
spec:
  ports:
    - name: "1883"
      port: 1883
      targetPort: 1883
  selector:
    io.kompose.service: mqtt
