k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: server-panel
  name: redis
spec:
  selector:
    io.kompose.service: redis
  ports:
    - port: 6379
      targetPort: 6379
